# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20221109132242_create_subscriptions_table.up.sql  20230126024009_add_status_to_subscriptions.sql  20230126024423_make_status_not_null_in_subscriptions.sql  20230126024934_create_subscription_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
