[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# cargo will default to `package.name` as the library name, if unspecified
[lib]
path = "src/lib.rs"

# a rust project can have multiple binaries, so you use TOMLs array syntax to declare binaries
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13"
secrecy = {version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.6"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0.14"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
# we need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[dev-dependencies]
claim = "0.5" # better error messages for result type on tests
fake = "~2.3"
linkify = "0.8.1"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
wiremock = "0.5"
